--- a/admin.html
+++ b/admin.html
@@ -118,6 +118,9 @@
   // Load complaints when page loads
   window.onload = loadComplaints;
 </script>
+<p style="text-align:center; margin-top:20px;">
+  <a href="index.html">Back to Complaint Form</a>
+</p>
 
 </body>
 </html>
